MODUSERSKC-48: Fix Sonar complaint